--- a/swap-demo-tutorial-part-2/index.html
+++ b/swap-demo-tutorial-part-2/index.html
@@ -29,7 +29,8 @@
                 <div id="form">
                     <div class="swapbox">
                         <div class="swapbox_select token_select" id="from_token_select">
-                            SELECT A TOKEN
+                          <img  class="token_img"  id="from_token_img">
+                          <span  id="from_token_text"></span>
                         </div>
                         <div class="swapbox_select">
                             <input class="number form-control" placeholder="amount" id="from_amount">
@@ -37,7 +38,8 @@
                     </div>
                     <div class="swapbox">
                         <div class="swapbox_select token_select" id="to_token_select">
-                            SELECT A TOKEN
+                          <img  class="token_img"  id="to_token_img">
+                          <span  id="to_token_text"></span>
                         </div>
                          <div class="swapbox_select">
                             <input class="number form-control" placeholder="amount" id="to_amount">
@@ -64,6 +66,23 @@
         </div>
       </div>
     </div>
-      <script src="./index.js" type="text/javascript"></script>
+    <!-- Add the new modal body here. Note we added id="token_modal" and updated the modal-title -->
+    <div class="modal" id="token_modal" tabindex="-1" role="dialog">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Select a Token</h5>
+            <button id="modal_close" type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- Replace the modal text with token_list -->
+            <div id="token_list"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+      <script src="./bundle.js" type="text/javascript"></script>
     </body>
 </html>
